[package]
name = "kupon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1" }
url = "2"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }